# autotools-template

./: LICENSE  README.md
non-recursive/: .gitignore  Makefile.am  configure.ac
non-recursive-googletest/: .gitignore  Makefile.am  README.md  common_flags.sh
non-recursive-googletest/debug/: debugconfigure
non-recursive-googletest/google-test/: libtool
non-recursive-googletest/google-test/scripts/: gtest-config
non-recursive-googletest/tests/: failing_test.cpp  mygtest.hpp  passing_test.cpp
non-recursive/tests/: mycatch.hpp
recursive/: .gitignore  Makefile.am  common_flags.sh  configure.ac
recursive/src/: Makefile.am  foo.hpp  main.cpp
recursive/tests/: Makefile.am  failing_test.cpp
